# serializer version: 1
# name: test_charge_history_day
  '''
       Day    Number of charges  Total time charging      Errors
  --------  -------------------  ---------------------  --------
  20201208                    2  8:15:00                       0
  20201205                    1  10:57:00                      0
  
  '''
# ---
# name: test_charge_history_month
  '''
    Month    Number of charges  Total time charging      Errors
  -------  -------------------  ---------------------  --------
   202011                    1  7:59:00                       0
  
  '''
# ---
# name: test_charge_mode_get
  '''
  Charge mode: always
  
  '''
# ---
# name: test_charge_mode_set
  dict({
    'data': dict({
      'attributes': dict({
        'action': 'schedule_mode',
      }),
      'type': 'ChargeMode',
    }),
  })
# ---
# name: test_charge_mode_set.1
  '''
  {'action': 'schedule_mode'}
  
  '''
# ---
# name: test_charge_schedule_show
  '''
  Day        Start time    End time      Duration  Active
  ---------  ------------  ----------  ----------  --------
  Monday     00:00         08:00              480  False
  Tuesday    00:00         08:00              480  False
  Wednesday  00:00         08:00              480  False
  Thursday   00:00         08:00              480  False
  Friday     00:00         08:00              480  False
  Saturday   00:00         08:00              480  False
  Sunday     00:00         08:00              480  False
  
  '''
# ---
# name: test_charge_schedule_show_alternate_single_active
  '''
  Mode: Scheduled
  Charge Time Start: 00:00
  Charge Duration in minutes: 9000
  Preconditioning temperature in °C: 20.0
  Preconditioning Steering Wheel? False
  Preconditioning Left Seat? False
  Preconditioning Right Seat? False
  
  Schedule ID: 0 [Status=Active] [Type=CHARGE_AND_PRECONDITIONING] [DepartureTime=02:00]
  Day        Active
  ---------  --------
  Monday     True
  Tuesday    True
  Wednesday  True
  Thursday   True
  Friday     True
  Saturday   True
  Sunday     True
  
  '''
# ---
# name: test_charge_schedule_show_alternate_single_inactive
  '''
  Mode: Scheduled
  Charge Time Start: 00:00
  Charge Duration in minutes: 9000
  Preconditioning temperature in °C: 20.0
  Preconditioning Steering Wheel? False
  Preconditioning Left Seat? False
  Preconditioning Right Seat? False
  
  Schedule ID: 0 [Status=Inactive] [Type=CHARGE_AND_PRECONDITIONING] [DepartureTime=02:00]
  Day        Active
  ---------  --------
  Monday     True
  Tuesday    True
  Wednesday  True
  Thursday   True
  Friday     True
  Saturday   True
  Sunday     True
  
  '''
# ---
# name: test_charge_schedule_show_alternate_multi_active
  '''
  Mode: Scheduled
  Charge Time Start: 01:55
  Charge Duration in minutes: 300
  Preconditioning temperature in °C: 19
  Preconditioning Steering Wheel? True
  Preconditioning Left Seat? False
  Preconditioning Right Seat? False
  
  Schedule ID: 0 [Status=Active] [Type=CHARGE] [DepartureTime=07:30]
  Day        Active
  ---------  --------
  Monday     True
  Tuesday    True
  Wednesday  False
  Thursday   False
  Friday     True
  Saturday   False
  Sunday     False
  
  Schedule ID: 1 [Status=Active] [Type=PRECONDITIONING] [DepartureTime=08:30]
  Day        Active
  ---------  --------
  Monday     False
  Tuesday    False
  Wednesday  False
  Thursday   True
  Friday     False
  Saturday   False
  Sunday     False
  
  Schedule ID: 2 [Status=Active] [Type=CHARGE_AND_PRECONDITIONING] [DepartureTime=10:50]
  Day        Active
  ---------  --------
  Monday     False
  Tuesday    False
  Wednesday  True
  Thursday   False
  Friday     False
  Saturday   True
  Sunday     False
  
  '''
# ---
# name: test_charging_dacia_start
  dict({
    'data': dict({
      'attributes': dict({
        'action': 'resume',
      }),
      'type': 'ChargePauseResume',
    }),
  })
# ---
# name: test_charging_dacia_start.1
  '''
  {'action': 'resume'}
  
  '''
# ---
# name: test_charging_dacia_stop
  dict({
    'data': dict({
      'attributes': dict({
        'action': 'pause',
      }),
      'type': 'ChargePauseResume',
    }),
  })
# ---
# name: test_charging_dacia_stop.1
  '''
  {'action': 'pause'}
  
  '''
# ---
# name: test_charging_settings_activate
  dict({
    'data': dict({
      'attributes': dict({
        'schedules': list([
          dict({
            'activated': True,
            'friday': dict({
              'duration': 450,
              'startTime': 'T00:00Z',
            }),
            'id': 1,
            'monday': dict({
              'duration': 450,
              'startTime': 'T00:00Z',
            }),
            'saturday': dict({
              'duration': 450,
              'startTime': 'T00:00Z',
            }),
            'sunday': dict({
              'duration': 450,
              'startTime': 'T00:00Z',
            }),
            'thursday': dict({
              'duration': 450,
              'startTime': 'T00:00Z',
            }),
            'tuesday': dict({
              'duration': 450,
              'startTime': 'T00:00Z',
            }),
            'wednesday': dict({
              'duration': 450,
              'startTime': 'T00:00Z',
            }),
          }),
          dict({
            'activated': True,
            'friday': dict({
              'duration': 15,
              'startTime': 'T23:30Z',
            }),
            'id': 2,
            'monday': dict({
              'duration': 15,
              'startTime': 'T23:30Z',
            }),
            'saturday': dict({
              'duration': 15,
              'startTime': 'T23:30Z',
            }),
            'sunday': dict({
              'duration': 15,
              'startTime': 'T23:30Z',
            }),
            'thursday': dict({
              'duration': 15,
              'startTime': 'T23:30Z',
            }),
            'tuesday': dict({
              'duration': 15,
              'startTime': 'T23:30Z',
            }),
            'wednesday': dict({
              'duration': 15,
              'startTime': 'T23:30Z',
            }),
          }),
          dict({
            'activated': True,
            'friday': None,
            'id': 3,
            'monday': None,
            'saturday': None,
            'sunday': None,
            'thursday': None,
            'tuesday': None,
            'wednesday': None,
          }),
          dict({
            'activated': False,
            'friday': None,
            'id': 4,
            'monday': None,
            'saturday': None,
            'sunday': None,
            'thursday': None,
            'tuesday': None,
            'wednesday': None,
          }),
          dict({
            'activated': False,
            'friday': None,
            'id': 5,
            'monday': None,
            'saturday': None,
            'sunday': None,
            'thursday': None,
            'tuesday': None,
            'wednesday': None,
          }),
        ]),
      }),
      'type': 'ChargeSchedule',
    }),
  })
# ---
# name: test_charging_settings_activate.1
  '''
  {'schedules': [{'id': 1, 'activated': True, 'tuesday': {'startTime': 'T04:30Z', 'duration': 420}, 'wednesday': {'startTime': 'T22:30Z', 'duration': 420}, 'thursday': {'startTime': 'T22:00Z', 'duration': 420}, 'friday': {'startTime': 'T23:30Z', 'duration': 480}, 'saturday': {'startTime': 'T18:30Z', 'duration': 120}, 'sunday': {'startTime': 'T12:45Z', 'duration': 45}}]}
  
  '''
# ---
# name: test_charging_settings_deactivate
  dict({
    'data': dict({
      'attributes': dict({
        'schedules': list([
          dict({
            'activated': False,
            'friday': dict({
              'duration': 450,
              'startTime': 'T00:00Z',
            }),
            'id': 1,
            'monday': dict({
              'duration': 450,
              'startTime': 'T00:00Z',
            }),
            'saturday': dict({
              'duration': 450,
              'startTime': 'T00:00Z',
            }),
            'sunday': dict({
              'duration': 450,
              'startTime': 'T00:00Z',
            }),
            'thursday': dict({
              'duration': 450,
              'startTime': 'T00:00Z',
            }),
            'tuesday': dict({
              'duration': 450,
              'startTime': 'T00:00Z',
            }),
            'wednesday': dict({
              'duration': 450,
              'startTime': 'T00:00Z',
            }),
          }),
          dict({
            'activated': True,
            'friday': dict({
              'duration': 15,
              'startTime': 'T23:30Z',
            }),
            'id': 2,
            'monday': dict({
              'duration': 15,
              'startTime': 'T23:30Z',
            }),
            'saturday': dict({
              'duration': 15,
              'startTime': 'T23:30Z',
            }),
            'sunday': dict({
              'duration': 15,
              'startTime': 'T23:30Z',
            }),
            'thursday': dict({
              'duration': 15,
              'startTime': 'T23:30Z',
            }),
            'tuesday': dict({
              'duration': 15,
              'startTime': 'T23:30Z',
            }),
            'wednesday': dict({
              'duration': 15,
              'startTime': 'T23:30Z',
            }),
          }),
          dict({
            'activated': False,
            'friday': None,
            'id': 3,
            'monday': None,
            'saturday': None,
            'sunday': None,
            'thursday': None,
            'tuesday': None,
            'wednesday': None,
          }),
          dict({
            'activated': False,
            'friday': None,
            'id': 4,
            'monday': None,
            'saturday': None,
            'sunday': None,
            'thursday': None,
            'tuesday': None,
            'wednesday': None,
          }),
          dict({
            'activated': False,
            'friday': None,
            'id': 5,
            'monday': None,
            'saturday': None,
            'sunday': None,
            'thursday': None,
            'tuesday': None,
            'wednesday': None,
          }),
        ]),
      }),
      'type': 'ChargeSchedule',
    }),
  })
# ---
# name: test_charging_settings_deactivate.1
  '''
  {'schedules': [{'id': 1, 'activated': True, 'tuesday': {'startTime': 'T04:30Z', 'duration': 420}, 'wednesday': {'startTime': 'T22:30Z', 'duration': 420}, 'thursday': {'startTime': 'T22:00Z', 'duration': 420}, 'friday': {'startTime': 'T23:30Z', 'duration': 480}, 'saturday': {'startTime': 'T18:30Z', 'duration': 120}, 'sunday': {'startTime': 'T12:45Z', 'duration': 45}}]}
  
  '''
# ---
# name: test_charging_settings_set
  dict({
    'data': dict({
      'attributes': dict({
        'schedules': list([
          dict({
            'activated': True,
            'friday': dict({
              'duration': 480,
              'startTime': 'T23:30Z',
            }),
            'id': 1,
            'monday': None,
            'saturday': dict({
              'duration': 120,
              'startTime': 'T18:30Z',
            }),
            'sunday': dict({
              'duration': 450,
              'startTime': 'T00:00Z',
            }),
            'thursday': dict({
              'duration': 450,
              'startTime': 'T00:00Z',
            }),
            'tuesday': dict({
              'duration': 450,
              'startTime': 'T00:00Z',
            }),
            'wednesday': dict({
              'duration': 450,
              'startTime': 'T00:00Z',
            }),
          }),
          dict({
            'activated': True,
            'friday': dict({
              'duration': 15,
              'startTime': 'T23:30Z',
            }),
            'id': 2,
            'monday': dict({
              'duration': 15,
              'startTime': 'T23:30Z',
            }),
            'saturday': dict({
              'duration': 15,
              'startTime': 'T23:30Z',
            }),
            'sunday': dict({
              'duration': 15,
              'startTime': 'T23:30Z',
            }),
            'thursday': dict({
              'duration': 15,
              'startTime': 'T23:30Z',
            }),
            'tuesday': dict({
              'duration': 15,
              'startTime': 'T23:30Z',
            }),
            'wednesday': dict({
              'duration': 15,
              'startTime': 'T23:30Z',
            }),
          }),
          dict({
            'activated': False,
            'friday': None,
            'id': 3,
            'monday': None,
            'saturday': None,
            'sunday': None,
            'thursday': None,
            'tuesday': None,
            'wednesday': None,
          }),
          dict({
            'activated': False,
            'friday': None,
            'id': 4,
            'monday': None,
            'saturday': None,
            'sunday': None,
            'thursday': None,
            'tuesday': None,
            'wednesday': None,
          }),
          dict({
            'activated': False,
            'friday': None,
            'id': 5,
            'monday': None,
            'saturday': None,
            'sunday': None,
            'thursday': None,
            'tuesday': None,
            'wednesday': None,
          }),
        ]),
      }),
      'type': 'ChargeSchedule',
    }),
  })
# ---
# name: test_charging_settings_set.1
  '''
  {'schedules': [{'id': 1, 'activated': True, 'tuesday': {'startTime': 'T04:30Z', 'duration': 420}, 'wednesday': {'startTime': 'T22:30Z', 'duration': 420}, 'thursday': {'startTime': 'T22:00Z', 'duration': 420}, 'friday': {'startTime': 'T23:30Z', 'duration': 480}, 'saturday': {'startTime': 'T18:30Z', 'duration': 120}, 'sunday': {'startTime': 'T12:45Z', 'duration': 45}}]}
  
  '''
# ---
# name: test_charging_start
  dict({
    'data': dict({
      'attributes': dict({
        'action': 'start',
      }),
      'type': 'ChargingStart',
    }),
  })
# ---
# name: test_charging_start.1
  '''
  {'action': 'start'}
  
  '''
# ---
# name: test_charging_stop
  dict({
    'data': dict({
      'attributes': dict({
        'action': 'stop',
      }),
      'type': 'ChargingStart',
    }),
  })
# ---
# name: test_charging_stop.1
  '''
  {'action': 'stop'}
  
  '''
# ---
# name: test_sessions_40
  '''
  Charge start         Charge end           Duration    Power (kW)    Started at    Finished at    Charge gained    Energy gained    Power level    Status
  -------------------  -------------------  ----------  ------------  ------------  -------------  ---------------  ---------------  -------------  --------
  2020-11-11 01:31:03  2020-11-11 09:30:17  7:59:00     3.10 kW       15 %          74 %           59 %                              slow           ok
  
  '''
# ---
# name: test_sessions_45
  '''
  Charge start         Charge end           Duration    Power (kW)    Started at    Finished at    Charge gained    Energy gained    Power level    Status
  -------------------  -------------------  ----------  ------------  ------------  -------------  ---------------  ---------------  -------------  --------
  2023-04-24 12:12:44  2023-04-24 13:49:39  1:37:00                   43 %          50 %                            4.10000038 kWh                  ok
  2023-04-24 15:19:40  2023-04-24 19:39:27  4:20:00                   49 %          64 %                            9.200001 kWh                    ok
  
  '''
# ---
# name: test_sessions_50
  '''
  Charge start         Charge end           Duration    Power (kW)    Started at    Finished at    Charge gained    Energy gained    Power level    Status
  -------------------  -------------------  ----------  ------------  ------------  -------------  ---------------  ---------------  -------------  --------
  2022-03-16 03:02:16  2022-03-16 05:01:58  1:59:42                   62 %          62 %                                                            error
  2022-03-16 21:18:42  2022-03-16 22:50:08  1:31:26                                 60 %                                                            error
  2022-03-17 02:01:10  2022-03-17 06:02:01  4:00:51                                 74 %                                                            error
  2022-03-18 02:01:13  2022-03-18 06:02:04  4:00:51                                 64 %                                                            error
  2022-03-18 18:34:28  2022-03-18 18:37:57  0:03:29                                 55 %                                                            error
  2022-03-18 18:40:37  2022-03-18 19:17:22  0:36:45                                 89 %                                                            error
  2022-03-19 16:18:18  2022-03-19 17:36:04  1:17:46                                 99 %                                                            error
  2022-03-20 22:21:31  2022-03-21 07:32:50  9:11:19                                 71 %                                                            error
  
  '''
# ---
